--- a/.gitignore
+++ b/.gitignore
@@ -108,5 +108,5 @@ App_Data
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
-*.nuspec
-.vs/config/applicationhost.config
+/.vs/config/applicationhost.config
+/.vs
